# options-pricing

./: .gitignore  README.md  pyproject.toml
src/amopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/amopt/dataclasses/: grids.py
src/amopt/lcp/: penalty.py
src/amopt/pricers/: american_binomial.py  american_fd.py  binomial.py  boundary_extract.py  closed_form.py  european_fd.py  pde_operator.py  pde_solver.py
src/amopt/tests/: __init__.py  test_american_binomial.py  test_boundary_properties.py  test_european_baseline.py  test_european_binomial.py  test_penalty.py
src/amopt/uniform/: operators.py
src/notebooks/: 02_boundary_plots.ipynb
